# any-storage

./: README.md  compose.yml  pyproject.toml
anystorage/: base.py  enums.py  settings.py  storage.py
anystorage/contrib/: aliyun_storage.py  minio_storage.py  rustfs_storage.py
anystorage/examples/: test_storage.py
anystorage/examples/aliyun/: test_bucket.py  test_object.py  test_storage.py
anystorage/examples/minio/: test_bucket.py  test_object.py  test_storage.py
anystorage/examples/rustfs/: test_bucket.py  test_object.py  test_storage.py
