[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any-storage"
version = "0.7"
description = "A generic OSS storage access library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.23",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "oss2>=2.19.1",
]

[tool.setuptools.packages.find]
include = ["anystorage*"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
